--- a/styles.css
+++ b/styles.css
@@ -903,3 +903,21 @@ body {
         justify-items: center;
     }
     }
+whatsapp-icon {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    z-index: 999;
+  }
+
+whatsapp-icon img {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+    transition: transform 0.2s;
+  }
+
+whatsapp-icon img:hover {
+    transform: scale(1.1);
+}
