--- a/styles.css
+++ b/styles.css
@@ -58,19 +58,11 @@ body {
     padding: 0 2rem;
 }
 
-.whatsapp-icon {
+.whatsapp-icon a {
     position: fixed;
     bottom: 20px;
     left: 20px;
     z-index: 999;
-  }
-
-.whatsapp-icon img {
-    width: 48px;
-    height: 48px;
-    border-radius: 50%;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    transition: transform 0.2s;
   }
 
 .whatsapp-icon img:hover {
