--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,9 @@ body {
     bottom: 20px;
     left: 20px;
     z-index: 999;
+    width: 50px;
+    height: 50px;
+    color: green;
   }
 
 .whatsapp-icon img:hover {
