--- a/styles.css
+++ b/styles.css
@@ -65,10 +65,13 @@ body {
     z-index: 999;
     width: 50px;
     height: 50px;
-    color: green;
+    background-color: green;
   }
-
-.whatsapp-icon img:hover {
+.whatsapp-icon i{
+    color: green;
+    font-size: 2rem;
+}
+.whatsapp-icon :hover {
     transform: scale(1.1);
 }
 
