--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ body {
     width: 50px;
     height: 50px;
     background-color: green;
+    font-size: 2rem;
   }
 .whatsapp-icon i{
     color: green;
