--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ body {
     z-index: 999;
     width: 50px;
     height: 50px;
-    background-color: green;
+    background-color: grey;
     font-size: 2rem;
   }
 .whatsapp-icon i{
