--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ body {
     z-index: 999;
     width: 50px;
     height: 50px;
+    border-radius: 50%;
     background-color: grey;
     font-size: 2rem;
   }
