--- a/styles.css
+++ b/styles.css
@@ -66,8 +66,11 @@ body {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: grey;
+    background-color: black;
     font-size: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 .whatsapp-icon i{
     color: green;
