--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-decoration: none;
   }
 .whatsapp-icon i{
     color: green;
